--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
   "name": "nextjs-basic-ssr",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "lorem": "yarn workspace @acme/lorem"
   },
-  "dependencies": {
-    "next": "12.0.4",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/node": "16.11.10",
-    "@types/react": "17.0.37",
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4",
-    "typescript": "4.5.2"
-  }
+  "private": true,
+  "workspaces": [
+    "sites/*"
+  ],
+  "keywords": [],
+  "author": "Wellington Guimaraes",
+  "license": "ISC"
 }
